--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Audit Prompts with Keywords + Google Form</title>
+  <title>Security & Compliance Prompts</title>
   <!-- SheetJS (xlsx) -->
   <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 
@@ -19,8 +19,8 @@
       --card-bg: #1e1e1e;
       --card-border: #2a2a2a;
       --sidebar-bg: #1a1a1a;
-      --domain-hover: rgba(0, 200,107,0.15);
-      --hover-bg: rgba(255,123,0,0.15);
+      --domain-hover: rgba(0, 200, 107, 0.15);
+      --hover-bg: rgba(255, 123, 0, 0.15);
     }
 
     body {
@@ -43,14 +43,14 @@
       padding: 12px 16px;
       background: #1f1f1f;
       border-bottom: 2px solid #2a2a2a;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.6);
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.6);
     }
     .header-left {
       display: flex;
       flex-direction: column;
       gap: 6px;
     }
-    .audit-title {
+    .prompt-title {
       font-size: 1.2rem;
       margin: 0;
       color: var(--accent-color);
@@ -78,21 +78,21 @@
       box-shadow: 0 0 4px var(--accent-color);
     }
 
-    /* AUDIT RADIO GROUP */
-    .audit-radio-group {
+    /* PROMPT RADIO GROUP */
+    .prompt-radio-group {
       display: flex;
       align-items: center;
       gap: 8px;
       color: #ccc;
       font-size: 0.85rem;
     }
-    .audit-radio-group label {
+    .prompt-radio-group label {
       display: flex;
       align-items: center;
       gap: 4px;
       cursor: pointer;
     }
-    .audit-radio-group input[type="radio"] {
+    .prompt-radio-group input[type="radio"] {
       accent-color: var(--accent-color-2);
       cursor: pointer;
     }
@@ -340,8 +340,10 @@
     /* ADD PROMPT IFRAME OVERLAY */
     .add-prompt-overlay {
       position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       background: rgba(0,0,0,0.7);
       display: none;
       align-items: center;
@@ -387,12 +389,11 @@
       transform: translateY(-2px);
     }
 
-    /* FOOTER: ABOUT, CONTRIBUTING, LINKS - GRID LAYOUT */
+    /* FOOTER: About, Contributing, Links - GRID LAYOUT */
     .footer-section {
       background: #1f1f1f;
       border-top: 2px solid #2a2a2a;
       padding: 16px 24px;
-      /* Instead of flex, use grid with 3 columns (auto-fit or auto-fill) */
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 32px;
@@ -417,7 +418,7 @@
     }
     .footer-col ul {
       list-style: none;
-      margin: 0; 
+      margin: 0;
       padding: 0;
     }
     .footer-col li {
@@ -430,8 +431,7 @@
   <!-- HEADER -->
   <div class="top-header">
     <div class="header-left">
-      <h1 class="audit-title">Audit Prompts</h1>
-      <span class="main-heading">Prompts Directory for Auditors</span>
+      <h1 class="prompt-title">Security & Compliance Prompts</h1>
       <span class="sub-heading">Select AI platform : </span>
       <div class="platform-bar" id="platformBar"></div>
     </div>
@@ -441,25 +441,43 @@
         <input type="text" id="searchInput" placeholder="Search prompts..." oninput="handleSearch()" />
       </div>
 
-      <!-- Audit Type -->
-      <div class="audit-radio-group">
+      <!-- Prompt Type Radio Buttons -->
+      <div class="prompt-radio-group">
         <label>
-          <input type="radio" name="auditType" value="All" checked onchange="handleAuditTypeChange(this.value)" />
+          <input
+            type="radio"
+            name="promptType"
+            value="All"
+            checked
+            onchange="handlePromptTypeChange(this.value)"
+          />
           All
         </label>
         <label>
-          <input type="radio" name="auditType" value="IT Audit" onchange="handleAuditTypeChange(this.value)" />
-          IT Audit
+          <input
+            type="radio"
+            name="promptType"
+            value="IT Prompts"
+            onchange="handlePromptTypeChange(this.value)"
+          />
+          IT Prompts
         </label>
         <label>
-          <input type="radio" name="auditType" value="Business Audit" onchange="handleAuditTypeChange(this.value)" />
-          Business Audit
+          <input
+            type="radio"
+            name="promptType"
+            value="Business Prompts"
+            onchange="handlePromptTypeChange(this.value)"
+          />
+          Business Prompts
         </label>
       </div>
 
       <!-- Add Prompt => Google Form -->
-      <button style="background:#333; border:1px solid #444; color:#eee; padding:6px 12px; border-radius:4px; cursor:pointer; font-size:0.85rem;"
-              onclick="showAddPromptModal()">
+      <button
+        style="background:#333; border:1px solid #444; color:#eee; padding:6px 12px; border-radius:4px; cursor:pointer; font-size:0.85rem;"
+        onclick="showAddPromptModal()"
+      >
         + Add Prompt
       </button>
     </div>
@@ -533,8 +551,7 @@
         <a href="https://www.linkedin.com/in/yasemin-oztas/" target="_blank">
           Yasemin Öztaş
         </a>.
-        It's a curated list of Audit Prompts for various AI platforms, focusing on
-        IT and Business audits.
+        It's a curated list of Security & Compliance Prompts for various AI platforms.
       </p>
     </div>
     <div class="footer-col">
@@ -602,7 +619,7 @@
     let filteredPrompts = [];
     let currentDomain = null;
     let currentPromptOriginal = "";
-    let selectedAuditType = "All";
+    let selectedPromptType = "All";
 
     document.addEventListener("DOMContentLoaded", async () => {
       createPlatformBar();
@@ -622,25 +639,27 @@
 
         // row[0]: Domain
         // row[1]: Prompt
-        // row[2]: Audit Type
+        // row[2]: PromptType
         // row[3]: Keywords
         const data = [];
         for (let i = 1; i < rows.length; i++) {
           const row = rows[i];
           if (!row || row.length < 2) continue;
-          const domainVal = row[0] ? String(row[0]).trim() : "No Domain";
-          const promptVal = row[1] ? String(row[1]).trim() : "";
-          const auditVal  = row[2] ? String(row[2]).trim() : "All";
-          const kwVal     = row[3] ? String(row[3]).trim() : "";
+
+          const domainVal   = row[0] ? String(row[0]).trim() : "No Domain";
+          const promptVal   = row[1] ? String(row[1]).trim() : "";
+          const promptType  = row[2] ? String(row[2]).trim() : "All";
+          const kwVal       = row[3] ? String(row[3]).trim() : "";
 
           data.push({
             domain: domainVal,
             prompt: promptVal,
-            auditType: auditVal,
+            promptType: promptType,
             keywords: kwVal
           });
         }
         allPrompts = data;
+
         renderDomainList(allPrompts);
         filteredPrompts = [...allPrompts];
         renderPrompts(filteredPrompts);
@@ -678,8 +697,8 @@
       }
     }
 
-    function handleAuditTypeChange(value) {
-      selectedAuditType = value;
+    function handlePromptTypeChange(value) {
+      selectedPromptType = value;
       updateFilter();
     }
 
@@ -725,12 +744,12 @@
         const card = document.createElement("div");
         card.className = "prompt-card";
 
-        // Title
+        // Domain as Title
         const titleDiv = document.createElement("div");
         titleDiv.className = "prompt-title";
         titleDiv.textContent = item.domain || "No Title";
 
-        // Prompt
+        // Prompt Text
         const contentDiv = document.createElement("div");
         contentDiv.className = "prompt-content";
         contentDiv.innerHTML = fillDefaultVariables(item.prompt);
@@ -746,7 +765,7 @@
           card.appendChild(keywordsDiv);
         }
 
-        // On click => show modal
+        // Card click => open modal
         card.addEventListener("click", () => {
           showModal(item.domain, item.prompt);
         });
@@ -760,19 +779,19 @@
     }
     function updateFilter() {
       const query = document.getElementById("searchInput").value.toLowerCase();
+
       filteredPrompts = allPrompts.filter(item => {
         const domainMatch = currentDomain ? (item.domain === currentDomain) : true;
 
-        // search domain, prompt, keywords
         const textMatch = (
           item.domain.toLowerCase().includes(query) ||
           item.prompt.toLowerCase().includes(query) ||
           (item.keywords && item.keywords.toLowerCase().includes(query))
         );
 
-        const auditMatch = (selectedAuditType === "All" || item.auditType === selectedAuditType);
+        const typeMatch = (selectedPromptType === "All" || item.promptType === selectedPromptType);
 
-        return domainMatch && textMatch && auditMatch;
+        return domainMatch && textMatch && typeMatch;
       });
       renderPrompts(filteredPrompts);
     }
@@ -792,7 +811,7 @@
       const platformName = platformConfig[selectedPlatform].name || "AI";
       modalChatBtn.textContent = `>_ Chat with ${platformName}`;
 
-      // Check variables
+      // Check for placeholders
       const vars = extractVariables(content);
       if (vars.length > 0) {
         const form = createVariableInputs(vars, variableContainer);
